# metalglyph

./: Cargo.toml  README.md
benches/: prepare.rs  state.rs
examples/: custom-glyphs.rs  hello-world.rs  text-sizes.rs
src/: cache.rs  lib.rs  shader.metal  text_atlas.rs  text_render.rs  viewport.rs
